Fixed element visibility issue

--- a/Multiplication game/styles.css
+++ b/Multiplication game/styles.css
@@ -1,39 +1,54 @@
-#playingheader,
+#playingHeader,
 #playingMain,
 #highscoresHeader,
 #highscoresMain,
 #scoreScreenHeader,
 #scoreScreenMain{
-    display: none;
+  display: none;
+}
+
+#startHeader,
+#startMain{
+  display: flex;
+}
+
+
+#startHeader{
+  background-color: blueviolet;
+  height: 90px;
 }
 
 
 .flex-container{
-    display: flex;
-    align-items: flex-start;
-    background-color: aqua;
+  display: flex;
+  align-items: center;
+  background-color: aqua;
 }
 
 
 .side-container{
-    align-items: center;
-    width: 25vw;
-    height: 30vw;
+  align-items: center;
+  width: 25vw;
+  height: 30vw;
 }
 
 .input-sides{
-    height: 27vw;
-    border-style: dotted;
+  height: 27vw;
+  border-style: dotted;
 }
 
 
 .center-container{
-    width: 50vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 50vw;
+  background-color: black;
 }
 
 .center-item{
-    border-color: brown;
-    justify-content: right;
+  border-color: brown;
+  justify-content: right;
 }
 
 .input-sides > .repetitions{
